<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/top"
            layout="@layout/item_top_bar" />


        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_logo_back"
            android:paddingStart="70dp"
            android:paddingEnd="70dp"
            android:paddingBottom="20dp"
            android:src="@drawable/logo_red"
            app:layout_constraintEnd_toEndOf="@id/login"
            app:layout_constraintStart_toStartOf="@id/login"
            app:layout_constraintTop_toBottomOf="@id/top" />


        <RadioGroup
            android:id="@+id/loginRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:checkedButton="@id/radioGroup"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/login"
            app:layout_constraintStart_toStartOf="@id/login"
            app:layout_constraintTop_toBottomOf="@id/login_logo">


            <RadioButton
                android:id="@+id/btnDriver"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/login_select_button_color"
                android:button="@null"
                android:checked="true"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/driver"
                android:textAlignment="center"
                android:textColor="@drawable/login_select_text_color" />

            <RadioButton
                android:id="@+id/btnCompany"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/login_select_button_color"
                android:button="@null"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/company"
                android:textAlignment="center"
                android:textColor="@drawable/login_select_text_color" />


            <RadioButton
                android:id="@+id/btnGeneral"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/login_select_button_color"
                android:button="@null"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/general"
                android:textAlignment="center"
                android:textColor="@drawable/login_select_text_color" />


        </RadioGroup>


        <EditText
            android:id="@+id/firstEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/firstEdit"
            android:padding="10dp"
            android:textColor="@color/textGray"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/secondEditText"
            app:layout_constraintTop_toBottomOf="@id/loginRadioGroup" />

        <EditText
            android:id="@+id/secondEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext"
            android:ems="10"
            android:hint="@string/secondEdit"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/textGray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/firstEditText" />


        <CheckBox
            android:id="@+id/idSaveCheckBox"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/secondEditText"
            app:layout_constraintTop_toBottomOf="@id/secondEditText" />

        <TextView
            android:id="@+id/idSaveCheckBoxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_id"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/idSaveCheckBox"
            app:layout_constraintStart_toEndOf="@id/idSaveCheckBox"
            app:layout_constraintTop_toTopOf="@id/idSaveCheckBox" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/select_back"
            android:backgroundTint="@color/kingThickRed"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/idSaveCheckBox" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/select_back"
            android:backgroundTint="@color/estimateGray"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/loginButton" />

        <LinearLayout
            android:id="@+id/goSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="@id/login"
            app:layout_constraintStart_toStartOf="@id/login"
            app:layout_constraintTop_toBottomOf="@id/signUpButton">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="아이디 찾기" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ㅣ" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="비밀번호 찾기" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>